--- a/ltam/modules/web/src/main/webapp/pages/advisor/alist.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/advisor/alist.xhtml
@@ -15,7 +15,7 @@
 
         <!-- BOX START -->
         <div class="layout-portlets-box">
-            <div class="Container90 Responsive50">
+            <div class="Container90">
                 <div class="ContainerIndent">
                     <p:confirmDialog global="true" showEffect="fade" hideEffect="explode" style="background-color: #ffffff;">
                         <h:form>
@@ -62,7 +62,7 @@
                                 </p:column>
                                 <p:column sortBy="#{managedVar.dateOpened}"
                                           headerText="Opened"
-                                          style="text-align: center"
+                                          style="text-align: left"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.dateOpened}">
                                     </h:outputText>
