--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cGoal.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cGoal.xhtml
@@ -50,7 +50,7 @@
                                      update="ceForm:pTabView:goalEntryArea, :ceForm:workArea, :ceForm:graphArea"/>
                 </div>
             </div>
-
+			<div class="EmptyBox10"></div>
 
         </p:panel>
     </div>
