--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/core0.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/core0.xhtml
@@ -15,7 +15,7 @@
             </p:inputText>
 
             <div class="Wid90">Account type</div>
-            <p:selectBooleanButton id="accountaxable" styleClass="Wid90"
+            <p:selectBooleanButton id="accountaxable" styleClass="Wid100"
                                    value="#{cepb.accountTaxable}" onLabel="Taxable"
                                    offLabel="Non-taxable">
                 <p:ajax listener="#{cepb.onTaxStrategy}"
@@ -33,7 +33,7 @@
 
 
             <div class="Wid90">Your current age</div>
-            <p:spinner id="age" value="#{cepb.age}" styleClass="Wid90"
+            <p:spinner id="age" value="#{cepb.age}" 
                        min="1" max="100" stepFactor="1">
                 <p:ajax listener="#{cepb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
