--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page2.xhtml
@@ -6,7 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Responsive100 TextAlCenter">
-            <h1>Which of the following best reflects your investment goals?</h1>
+            <h1>Which of the following best reflects your expectations for this investment?</h1>
 
             <h2>
                 <p:selectOneRadio layout="pageDirection" value="#{ltamprofile.ans2}"
