--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
@@ -34,7 +34,7 @@
        	    <tr>
 		<td colspan="3">
 		   <div class="Fs8 TexAlCenter">
-			Please move to the spot on the bar with the most appropriate value
+               Please slide the dot to the place on the bar that reflects your time horizon for this investment.
 		   </div>
 		</td>
 	    </tr>
