--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
@@ -7,8 +7,9 @@
 
     <div class="Container100 Responsive50 TextAlCenter">
         <h1>
-Risk tolerance is defined by the investor's ability to accept short term losses for potential 
-long-term gains. Your tolerance for risk is:
+            Risk tolerance is defined as an investor's ability to accept periodic losses
+            for the potential to realize long-term gains. How would you rate your risk
+            tolerance?
         </h1>
 
         <div class="EmptyBox50"></div>
