--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page6.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 Responsive50 TextAlCenter">
+    <div class="Container100 TextAlCenter">
         <h1>
             Risk tolerance is defined as an investor's ability to accept periodic losses
             for the potential to realize long-term gains. How would you rate your risk
