--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page1.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page1.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 Responsive50 TextAlCenter">
+    <div class="Container100 TextAlCenter">
 
         <div class="TexAlCenter">
             <h1>
