--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page3.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <div class="Container100 Responsive50 TextAlCenter">
+    <div class="Container100 TextAlCenter">
         <h1>How long do you plan on keeping this account invested?</h1>
 
         <div class="EmptyBox50"></div>
