--- a/ltam/modules/web/src/main/webapp/start.xhtml
+++ b/ltam/modules/web/src/main/webapp/start.xhtml
@@ -1,64 +1,267 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+﻿<ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"
-                template="/template/common/simplelayout.xhtml">
+                xmlns:p="http://primefaces.org/ui">
 
-    <f:metadata>
-        <f:viewParam name="advisor" value="#{ltamprofile.beanAdvisor}"/>
-        <f:viewParam name="rep" value="#{ltamprofile.beanRep}"/>
-        <f:event type="preRenderView" listener="#{ltamprofile.preRenderView}"/>
-        <f:viewParam name="cid" value="#{uiLayout.cid}"/>
-        <f:event type="preRenderView" listener="#{uiLayout.preRenderView}"/>
-    </f:metadata>
+<f:metadata>
+    <f:viewParam name="advisor" value="#{ltamprofile.beanAdvisor}"/>
+    <f:viewParam name="rep" value="#{ltamprofile.beanRep}"/>
+    <f:event type="preRenderView" listener="#{ltamprofile.preRenderView}"/>
+</f:metadata>
 
-    <ui:define name="content">
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en"> <!--<![endif]-->
 
-        <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
-                <div class="Container90 Fnone MarAuto TexAlCenter">
-                    <h:form id="logonForm" prependId="false">
-                        <div class="EmptyBox30"></div>
-                        <h1>
-                            You have entered<br/>
-                            <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}" styleClass="Fleft" library="invessence"
-                                            class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
+<head>
 
-                        </h1>
-                        <div class="EmptyBox20"></div>
-                        Clients have trusted Ladenburg Thalmann Asset Management
-                        to manage over $2 billion of their assets.
-                        <div class="EmptyBox20"></div>
-                        See what LTAM has to offer by answering a few short questions
-                        to help us build you a risk managed portfolio customized to your
-                        financial needs.
-                        <div class="EmptyBox20"></div>
-                        <div class="Fs8 TexAlCenter">
-                            You are leaving the website of individual(s) who are registered representatives of an
-                            Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM's
-                            Symbil Website. The individual(s) of the Affiliate and the Affiliate may receive a referral fee
-                            for referring you to this site.
-                        </div>
-                        <div class="EmptyBox20"></div>
-                        <p:button  value="Get Started" icon="fa fa-arrow-right" styleClass="Fs16 BlueButton" href="/pages/try/index.xhtml"></p:button>
-                        <div class="EmptyBox20"></div>
-                        <p:button  value="Login" icon="fa fa-lock" styleClass="Fs16 RaisedButton" href="/login.xhtml"></p:button>
-                        <div class="EmptyBox20"></div>
-                        <div class="Seperator"></div>
-                        <div class="EmptyBox10"></div>
-                        <div class="Fs8 TexAlCenter">
-                            By using Symbil you consent to electronic delivery of our
-                            <a href="/reports/docs/LTAM-Symbil-Brochure.pdf"
-                               target="_ltam">brochure</a>
-                            with privacy policy.
-                        </div>
-                        <div class="EmptyBox40"></div>
-                    </h:form>
-                </div>
+    <!-- Basic Page Needs
+  ================================================== -->
+    <meta charset="utf-8"/>
+    <title>Symbil</title>
+    <meta name="description" content="Start building your portfolio today"/>
+    <meta name="author" content="gregoire vella"/>
+    <meta name="keywords" content="Investments"/>
+    <meta name="robots" content="index,all,follow"/>
+    <meta name="google-site-verification" content=""/>
+
+
+    <!-- Mobile Specific Metas
+  ================================================== -->
+    <meta property="og:image" content="http://www.gregoire-vella.com/images/greg.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+
+    <!-- CSS
+  ================================================== -->
+    <link rel="stylesheet" href="css/font/font.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/symbil.css"/>
+    <link rel="stylesheet" href="css/responsive.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+
+    <!-- JS
+  ================================================== -->
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/symbil.js"></script>
+    <script type="text/javascript" src="js/scroll.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script src="//www.youtube.com/iframe_api"></script>
+
+</head>
+
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+<!-- Favicons
+================================================== -->
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png"/>
+<link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
+<link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
+<link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
+<link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
+<link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
+
+<body>
+
+<div class="container">
+    <div id="popup-bg">
+        <div id="popup">
+            <div class="close" id="close_popup"></div>
+            <div class="interactive" style="padding-bottom: 56.25%">
+                <iframe id="player_0PHICbMT3hQ" frameborder="0" allowfullscreen="1" title="YouTube video player" width="100%" height="100%"
+                        src="https://www.youtube.com/embed/F9M7YtaqQvM?wmode=transparent&amp;modestbranding=1&amp;rel=0&amp;showinfo=0&amp;controls=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.symbil.com">
+                </iframe>
+            </div>
+
+        </div>
+    </div>
+    <header class="no-bg-header">
+        <div class="content">
+            <a href="index.html"><img src="images/logo-white@2x.png" width="120px" alt="logo" class="logo"/></a>
+            <a href="index.html"><img src="images/logo@2x.png" width="120px" alt="logo" class="logo-colors"/></a>
+            <nav>
+                <ul class="desktop">
+                    <li><a href="https://symbil.com/login.xhtml" class="smooth_transition" style="padding-right:0"><i
+                            class="fa fa-lock"></i>Sign in</a></li>
+                </ul>
+                <ul class="right mobile">
+                    <li><a href="#menu_mobile" onclick="display_menu_mobile()" class="smooth_transition">MENU</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div id="menu_mobile">
+        <a class="close_mobile smooth_transition" href="javascript:void(0)" onclick="display_menu_mobile()"><span
+                class="sprite closemobilemenu"></span> CLOSE</a>
+        <ul class="buttons">
+            <li><a href="https://symbil.com/login.xhtml" class="smooth_transition"><i class="fa fa-lock"></i>Sign in</a></li>
+        </ul>
+    </div>
+    <div class="cover index">
+        <div class="content">
+            <div class="clear"></div>
+            <div class="caption home">
+                <h1>Start building your portfolio today.</h1>
+
+                <p>You are leaving the website of individual(s) who are registered representatives of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM's Symbil Website. The individual(s) of the Affiliate and the Affiliate may receive a referral fee for referring you to this site.</p>
+                <a href="#" class="no-bg-button smooth_transition" id="open_popup"><i class="fa fa-play"></i>Watch video</a>
+                <br class="br-buttons"/><br class="br-buttons"/><br class="br-buttons"/>
+                <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
             </div>
         </div>
+    </div>
+    <div class="key_features">
+        <div class="content">
+            <ul>
+                <li class="col">
+                    <div>
+                        <div class="money_icon"></div>
+                        <h2>Simple way to save</h2>
 
-    </ui:define>
+                        <p>In only a few minutes, you’ll be invested in a diversified mutual fund, based on your objectives, and on your way to long-term saving and investing. All online, simple, and seamless.</p>
+                    </div>
+                </li>
+                <li class="col">
+                    <div>
+                        <div class="tick_icon"></div>
+                        <h2>Automatic investment</h2>
 
+                        <p>Set-up monthly or quarterly automated transfers into your account and save for your future
+                            without lifting a finger.</p>
+                    </div>
+                </li>
+                <li class="col">
+                    <div>
+                        <div class="chart_icon"></div>
+                        <h2>Constantly managed</h2>
+
+                        <p>The mutual funds available through Symbil are actively managed by experienced investment professionals and tactically adjusted based on changes in the market. We help you plan for your financial future.</p>
+                    </div>
+                </li>
+                <li class="clear"></li>
+            </ul>
+        </div>
+    </div>
+    <div class="portfolio">
+        <div class="content">
+            <div class="columns">
+                <img src="images/portfolio/portfolio-1-@2x.gif" alt="Portfolio" class="visual"/>
+            </div>
+            <div class="columns right-col">
+                <h2>We help you plan for your financial future.</h2>
+
+                <p>Symbil’s proprietary algorithms incorporate key factors such as age, risk tolerance, goals and time horizon to recommend one of five globally diversified mutual funds. This means your investment is tailored to your needs and goals. The system is simple enough for first time savers, but provides a level of professional investment management that’s required by the most experienced investors, making it an effective tool for anyone.</p>
+                <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="expert">
+        <div class="content">
+            <div class="columns">
+                <h2>Experts are behind your portfolio.</h2>
+
+                <p>Symbil is managed by Ladenburg Thalmann Asset Management (LTAM), an SEC Registered Investment Advisor, which was established in 1982. LTAM’s dedicated professionals have over 100 years of investment management experience and manage over $2 Billion for clients like you! </p>
+                <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
+            </div>
+            <div class="columns right-col">
+                <img src="images/expert/expert-@2x.png" alt="Expert" class="visual"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="security">
+        <div class="content">
+            <div class="columns">
+                <img src="images/security/security-@2x.png" alt="Security" class="visual"/>
+            </div>
+            <div class="columns right-col">
+                <h2>We are serious about security.</h2>
+
+                <p>Symbil uses two Secure Socket Layer (SSL) protocols to encrypt the data you provide to the system. In other words, your personal information is totally secure. </p>
+                <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
+            </div>
+            <div class="clear" id="advisors"></div>
+        </div>
+    </div>
+
+    <div class="advisors">
+        <div class="content">
+            <!--<h2>We are built to work with advisors <div class="green-line"></div></h2>
+                <p>How we work with you Mox dicta finierat, multitudo omnis ad, quae imperator voluit, promptior laudato consilio consensit in pacem ea ratione maxime percita, quod norat expeditionibus ortunam eius in malis tantum civilibus vigilasse, cum autem bella moverentur externa, accidisse plerumque luctuosa, icto post haec foedere gentium ritu perfectaque sollemnitate imperator Mediolanum ad hiberna discessit. </p>-->
+            <div style="text-align:center">
+                <a href="mailto:support@symbil.com" class="green-button smooth_transition">Contact us</a>
+            </div>
+
+            <div class="clear"></div>
+        </div>
+    </div>
+
+    <!--<div class="prefooter">
+        <div class="content">
+            <div class="social">
+                <a href="http://google.com/"><div class="google smooth_transition link"></div></a>
+                <a href="http://www.linkedin.com"><div class="linkedin smooth_transition link"></div></a>
+                <a href="http://twitter.com"><div class="twitter smooth_transition link"></div></a>
+                <a href="https://facebook.com" style="padding-right:0"><div class="facebook smooth_transition link"></div></a>
+                <div class="clear"></div>
+            </div>
+                <div class="clear"></div>
+        </div>
+    </div>-->
+    <div class="legal">
+        <div class="content">
+            <p>Symbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. Before investing, please review the LTAM
+                <a href="https://symbil.com/reports/docs/LTAM-Symbil-Brochure.pdf">Symbil Disclosure Brochure</a> and applicable <a
+                        href="https://symbil.com/reports/docs/Prospectus.pdf">mutual fund prospectus</a>. Diversification does not ensure profit or protect against loss. The Ladenburg Funds are distributed through Ladenburg Thalmann &amp; Co. Inc., a member of the NYSE_MKT and other principal exchanges,
+                <a href="http://www.finra.org/">FINRA</a> and <a
+                        href="http://www.sipc.org/">SIPC</a>; and through other subsidiaries of Ladenburg Thalmann Financial Services Inc. Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS.
+                Not FDIC Insured. • No Bank Guarantee. • May Lose Value</p>
+        </div>
+    </div>
+    <footer>
+        <div class="content">
+            <div class="copyright">Symbil © 2016</div>
+            <div class="clear"></div>
+        </div>
+    </footer>
+
+</div>
+<!--Analytics-->
+<script>
+    (function (i, s, o, g, r, a, m)
+    {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function ()
+        {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-67091431-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+
+
+</body>
+</html>
 </ui:composition>
